--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         body {
             background: #2ecc71;
             color: #fff;
+            position:relative; 
+            height: 100vh;
         }
 
         * {
@@ -131,7 +133,6 @@
         .app-content {
             padding-top: 64px;
             padding-bottom: 40px;
-            overflow: auto;
         }
 
         .toll-condition {
@@ -180,7 +181,6 @@
         .popup-content {
             overflow: scroll;
             -webkit-overflow-scrolling: touch;
-            height: 100%;
             position: absolute;
             top: 44px;
             left: 0;
