--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     <script src="assets/js/jquery.min.js"></script>
 
     <!-- Fastclick JS -->
-    <script src="assets/js/fastclick.js"></script>
+    <script src="assets/js/fastclick.min.js"></script>
     <!-- App Core JS -->
     <script src="assets/js/app.js"></script>
 </body>
