Added AppRate Phonegap plugin

--- a/index.html
+++ b/index.html
@@ -398,6 +398,9 @@
     <!-- Powerange JS - iOS 7 style rangeslider -->
     <script src="assets/js/powerange.min.js"></script>
 
+    <!-- AppRate Phonegap plugin -->
+    <script src="assets/js/AppRate.js"></script>
+    <script src="assets/js/AppRateLocales.js"></script>
 
     <!-- App Core JS -->
     <script src="assets/js/app.js"></script>
